--- a/VAEX.ipynb
+++ b/VAEX.ipynb
@@ -44,7 +44,7 @@
       },
       "source": [
         "# VAEX\n",
-        "This notebook shows how to train VAEX to reproduce the results pubblished in the paper Hierarchical variational autoencoders for visual counterfactuals."
+        "This notebook shows how to train VAEX to reproduce the results published in the paper Hierarchical variational autoencoders for visual counterfactuals."
       ]
     },
     {
@@ -594,11 +594,11 @@
         "          for d_mu, d_logvar, p_logvar in zip(outputs['mu'][1:],outputs['log_var'][1:],outputs['prior_log_var']):\n",
         "                #d_mu = q_mu - p_mu\n",
         "                #d_logvar = q_logvar - p_logvar  \n",
-        "                KLD_matrix = -1-d_logvar + d_logvar.exp() + (d_mu**2)/p_logvar.exp()\n",
+        "                KLD_matrix = -1 + d_logvar + (-d_logvar).exp() + (d_mu**2)/p_logvar.exp()\n",
         "                KLD_free_bits = F.softplus(KLD_matrix-2*freebits)+2*freebits\n",
         "                KLD += 0.5*KLD_free_bits.mean(0).sum()\n",
         "                KLD_real += 0.5*KLD_matrix.mean(0).sum()\n",
-        "          return KLD,KLD_real\n",
+        "          return KLD, KLD_real\n",
         "\n",
         "    def condition(self,inputs,outputs,targets):\n",
         "          return torch.zeros_like(outputs['mu'][0])\n",
