--- a/VAEX.ipynb
+++ b/VAEX.ipynb
@@ -594,7 +594,7 @@
         "          for d_mu, d_logvar, p_logvar in zip(outputs['mu'][1:],outputs['log_var'][1:],outputs['prior_log_var']):\n",
         "                #d_mu = q_mu - p_mu\n",
         "                #d_logvar = q_logvar - p_logvar  \n",
-        "                KLD_matrix = -1 + d_logvar + (-d_logvar).exp() + (d_mu**2)/p_logvar.exp()\n",
+        "                KLD_matrix = -1 - d_logvar + d_logvar.exp() + (d_mu**2)/p_logvar.exp()\n",
         "                KLD_free_bits = F.softplus(KLD_matrix-2*freebits)+2*freebits\n",
         "                KLD += 0.5*KLD_free_bits.mean(0).sum()\n",
         "                KLD_real += 0.5*KLD_matrix.mean(0).sum()\n",
